# rust-bip352

./: Cargo.toml  README.md  justfile
src/: address.rs  label.rs  lib.rs  outpoints.rs  receive.rs  receiver.rs  send.rs  sender.rs  spend.rs  wallet.rs
tests/: functional.rs  test_vector.rs
tests/common/: mod.rs
tests/data/: send_and_receive_test_vectors.json
