[package]
name = "bip352"
version = "0.1.0-alpha.2"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://jirijakes.com/code/rust-bip352"
description = "Implementation of BIP 352 Silent Payments"
keywords = ["bitcoin"]
exclude = ["justfile"]

[features]
default = ["send", "receive"]
send = []
receive = []

[dependencies]
bitcoin = "0.30"

[dev-dependencies]
bitcoind = "0.34.1"
indexmap = { version = "2.1", features = ["serde"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
