[package]
name = "bip352"
version = "0.1.0-alpha.4"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://jirijakes.com/code/rust-bip352"
description = "Implementation of BIP 352 Silent Payments"
keywords = ["bitcoin"]
exclude = ["justfile"]

[features]
default = ["send", "receive", "spend"]
send = []
receive = []
spend = []

[dependencies]
bitcoin = { version = "0.32", features = ["serde"] }
bech32 = "0.11"

[dev-dependencies]
bitcoind = "0.36"
miniscript = { git = "https://github.com/rust-bitcoin/rust-miniscript/" }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
rand = "0.8.5"
secp256k1 = { version = "0.29", features = ["rand"] }
proptest = "1"
